# COPG

./: CMakeLists.txt  LICENSE  README.md  changelog.md  config.json  module.prop  spoof.js  spoof_module.bak2  spoof_module.cpp  spoof_module.cpp.bak  test.cpp  uninstall.sh  update.json
.github/workflows/: JNI.yml  JSON.yml  build  build.yml  main  main.yml  update  update.yml
zygisk/: sp.bak  spoof.cpp
